@@ -33,6 +33,7 @@
 * Adding ability to set password expiration period, default is to be disabled
 * Implement setPointValue in HistoricalDataPoint, save value unconditionally
 * Bugfix for repeatedly saving the Point Hierarchy creating many data point listeners
+* Shorten description for Data Point event notify work items to reduce memory footprint in large systems.  
 
 *Version 3.4.5*
 * Content Security Policy (CSP) is now disabled by default and the configuration options have changed, please review the new setting names and update your env.properties file if you want to continue using CSP
